--- a/app/src/main/res/layout/activity_analisi.xml
+++ b/app/src/main/res/layout/activity_analisi.xml
@@ -10,7 +10,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/chart"
@@ -76,25 +82,18 @@
 
     </android.support.design.widget.BottomNavigationView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/select_data"
-        android:layout_width="51dp"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="60dp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginBottom="56dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:adjustViewBounds="false"
-        android:clickable="true"
-        android:focusable="true"
-        android:paddingBottom="0dp"
-        android:visibility="visible"
-        app:backgroundTint="?attr/actionModeSplitBackground"
+        android:layout_marginStart="328dp"
+        android:text="Cambia data"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_action_period" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
