--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,7 +41,6 @@
             app:layout_constraintVertical_bias="1.0"
             app:menu="@menu/bottom_nav_menu" />
 
-
         <TextView
             android:id="@+id/info_nome"
             android:layout_width="wrap_content"
@@ -60,7 +59,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.018" />
-
+        <Spinner
+            android:id="@+id/spinnerInfo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="serre"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
             android:id="@+id/scroller"
@@ -70,11 +81,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_nome"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintVertical_bias="0.0">
 
             <LinearLayout
@@ -222,7 +233,6 @@
                     android:text="@string/varieta"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.503"
                     app:layout_constraintStart_toStartOf="parent"
@@ -243,7 +253,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:inputType="none"
-                    android:text="coefficiente entrata:"
+                    android:text="Coefficiente entrata:"
                     android:textAlignment="viewStart"
                     android:textSize="12sp"
                     android:textStyle="italic"
@@ -290,7 +300,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:inputType="none"
-                    android:text="coefficiente uscita:"
+                    android:text="Coefficiente uscita:"
                     android:textAlignment="viewStart"
                     android:textSize="12sp"
                     android:textStyle="italic"
@@ -369,7 +379,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/info_uscita"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <EditText
+                <TextView
                     android:id="@+id/label_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -397,7 +407,7 @@
                     android:id="@+id/info_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="204dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -409,13 +419,22 @@
                     android:inputType="none"
                     android:text="@string/_00_00_00"
                     android:textAlignment="center"
-                    app:layout_constraintBottom_toBottomOf="@+id/scroller"
+                    app:layout_constraintBottom_toBottomOf="@+id/button_elimina"
                     app:layout_constraintEnd_toEndOf="parent"
-
                     app:layout_constraintHorizontal_bias="0.503"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/info_varieta"
                     app:layout_constraintVertical_bias="0.0" />
+
+                <Button
+                    android:id="@+id/button_delete"
+                    android:layout_width="333dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="200dp"
+                    android:text="Elimina Serra"
+                    android:layout_gravity="center"
+                    android:textColor="@color/cardview_light_background"
+                    android:background="@color/colorPrimary"
+                    />
 
 
             </LinearLayout>
