--- a/app/src/main/res/layout/activity_aggiungi.xml
+++ b/app/src/main/res/layout/activity_aggiungi.xml
@@ -81,7 +81,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="0dp"
-                    android:text="serra"
+                    android:text="Serra:"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView5"
                     app:layout_constraintEnd_toStartOf="@+id/textView5"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:ems="10"
-                    android:hint="inserire il nome della serra"
+                    android:hint="Inserire il nome della serra"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText7"
                     app:layout_constraintStart_toStartOf="@+id/info_varieta" />
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="0dp"
                     android:layout_marginEnd="21dp"
-                    android:text="metri quadri"
+                    android:text="Metri quadri:"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/info_coltura"
                     app:layout_constraintEnd_toEndOf="@+id/textView8" />
@@ -117,7 +117,7 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginStart="0dp"
                     android:ems="10"
-                    android:hint="inserire metri quadri"
+                    android:hint="Inserire metri quadri"
                     android:inputType="textPersonName"
                     app:layout_constraintStart_toStartOf="@+id/textView5"
                     app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -126,7 +126,7 @@
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="coltura"
+                    android:text="Coltura:"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView6"
                     app:layout_constraintEnd_toEndOf="@+id/textView8"
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:ems="10"
-                    android:hint="non specificata"
+                    android:hint="Specificare coltura"
                     android:inputType="textPersonName"
                     app:layout_constraintStart_toStartOf="@+id/textView8"
                     app:layout_constraintTop_toBottomOf="@+id/info_m2" />
@@ -147,7 +147,7 @@
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="varietà"
+                    android:text="Varietà:"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="@+id/info_nome"
                     app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -161,7 +161,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="0dp"
                     android:ems="10"
-                    android:hint="non specificata"
+                    android:hint="Specificare varietà"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -171,27 +171,52 @@
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="trapianto"
+                    android:text="Data del trapianto:"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toStartOf="@+id/textView5"
                     app:layout_constraintStart_toStartOf="@+id/textView5"
                     app:layout_constraintTop_toTopOf="@+id/scrollView4" />
 
-                <Button
-                    android:id="@+id/button_data"
-                    android:layout_width="129dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:background="@color/colorPrimary"
-                    android:textColor="@color/cardview_light_background"
-                    android:onClick="showDatePickerDialog"
-                    android:text="inserisci data" />
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
+                    <Button
+                        android:id="@+id/button_dataA"
+                        android:layout_width="129dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:background="@color/colorPrimary"
+                        android:onClick="showDatePickerDialog"
+                        android:text="inserisci data"
+                        android:textColor="@color/cardview_light_background" />
+
+                    <TextView
+                        android:id="@+id/info_dataA"
+                        android:layout_width="160dp"
+                        android:layout_height="45dp"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="10dp"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:inputType="none"
+                        android:text="@string/_00_00_00"
+                        android:textAlignment="center"
+                        android:textSize="30sp" />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="coefficiente entrata"
+                    android:text="Coefficiente entrata:"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="@+id/registro_ec"
                     app:layout_constraintTop_toTopOf="@+id/registro_ec" />
@@ -202,7 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:ems="10"
-                    android:hint="inserire coefficiente L/O in entrata"
+                    android:hint="Inserire coefficiente L/O in entrata"
                     android:inputType="numberDecimal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/registro_ec" />
@@ -211,7 +236,7 @@
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="coefficiente sgrondo"
+                    android:text="Coefficiente sgrondo:"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="@+id/editText7"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -222,7 +247,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:ems="10"
-                    android:hint="inserire coefficiente L/O sgrondo"
+                    android:hint="Inserire coefficiente L/O sgrondo"
                     android:inputType="numberDecimal"
                     app:layout_constraintBottom_toTopOf="@+id/registro_ec"
                     app:layout_constraintStart_toStartOf="@+id/textView9" />
@@ -231,7 +256,7 @@
                     android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="targetEC"
+                    android:text="Target EC:"
                     android:textSize="18sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/registro_ec"
                     app:layout_constraintStart_toStartOf="@+id/registro_ec" />
@@ -242,7 +267,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
-                    android:hint="inserire target EC"
+                    android:hint="Inserire target EC"
                     android:inputType="numberDecimal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/editText7"
