--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -15,12 +15,24 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/toolbar"
-         />
+        />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
+        <Spinner
+            android:id="@+id/spinnerReg"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="serre"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="wrap_content"
